--- a/LogIn/LogIn/LogIn/Resources/Resource.resx
+++ b/LogIn/LogIn/LogIn/Resources/Resource.resx
@@ -141,6 +141,15 @@
   <data name="Login" xml:space="preserve">
     <value>Login</value>
   </data>
+  <data name="LogOut" xml:space="preserve">
+    <value>Log Out</value>
+  </data>
+  <data name="Menu" xml:space="preserve">
+    <value>Menu</value>
+  </data>
+  <data name="MyProfile" xml:space="preserve">
+    <value>My Profile</value>
+  </data>
   <data name="Noconnexion" xml:space="preserve">
     <value>There are not connexion</value>
   </data>
@@ -164,5 +173,23 @@
   </data>
   <data name="Search" xml:space="preserve">
     <value>Search...</value>
+  </data>
+  <data name="VirtualMarker" xml:space="preserve">
+    <value>Virtual marker</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>First name</value>
+  </data>
+  <data name="FirstNamePlaceHolder" xml:space="preserve">
+    <value>First name...</value>
+  </data>
+  <data name="Regist" xml:space="preserve">
+    <value>Regist</value>
+  </data>
+  <data name="SecondName" xml:space="preserve">
+    <value>Second name</value>
+  </data>
+  <data name="SecondNamePlaceHolder" xml:space="preserve">
+    <value>Second name...</value>
   </data>
 </root>
